HelloUltraviolet/Fixtures/RejectedSource/Expressions/QualifiedNameResolution/Expected.uv
//! Expected diagnostic metadata for the QualifiedNameResolution rejected-source specimen.

expectedDiagnostic("E-MOD-1301", "def.16.QualifiedNameResolution")
